--- a/trunk/http/CMakeLists.txt
+++ b/trunk/http/CMakeLists.txt
@@ -6,8 +6,8 @@ include_directories(${PROJECT_BINARY_DIR}  ${OPENSSL_INCLUDE_DIR})
 
 if(WIN32)
 SET(GLOG_LIB libglog)
-SET(TBB_DEBUG_LIB libtbb_debug)
-SET(TBB_LIB libtbb)
+SET(TBB_DEBUG_LIB tbb_debug)
+SET(TBB_LIB tbb)
 SET(EVENT_LIB libevent)
 SET(SOCKET_LIB Ws2_32)
 elseif(UNIX)
